--- a/notice_detail.html
+++ b/notice_detail.html
@@ -173,17 +173,12 @@
                 author: 'manager',
                 views: 69,
                 content: `안녕하세요. withremit입니다.
-
-올해에도 withremit에 많은 관심과 충전을 보내 주신 분들에 감사드립니다.
-
-설 연휴의 영업일을 다음과 같이 안내 드립니다.
-새해에도 변함없는 관심과 배풍을 부탁드립니다.
-아무쪼록 새해에도 잘 부탁드립니다.
-
-                        - 기 -
-
-12/29 정상영업
-12/30 오전공무 (오전 11시까지 정윤뜨까지 땡땡출금)`
+항상 withremit을 이용해 주셔서 감사합니다.
+하기의 추석 연휴기간 중 일요일을 제외하고 withremit은 정상영업합니다.
+10월3일(금) ～ 10월9일(목)
+10시부터 17시까지(당일송금 17시 마감) 입니다.
+그 외 궁금하신 점이 있으시면 withremit 고객센터로 연락주세요.
+감사합니다.`
             },
             {
                 number: 17,
