Update notice title and content for withremit

--- a/notice_detail.html
+++ b/notice_detail.html
@@ -63,7 +63,7 @@
 
                 <div class="notice-detail-card">
                     <div class="notice-detail-header">
-                        <h2 class="notice-detail-title" id="noticeTitle">추석 연휴에도 하나송금은 정상근무합니다.</h2>
+                        <h2 class="notice-detail-title" id="noticeTitle">추석 연휴에도 withremit은 정상근무합니다.</h2>
                         <div class="notice-detail-meta">
                             <span class="meta-item">
                                 <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2">
@@ -182,7 +182,7 @@
             },
             {
                 number: 17,
-                title: '추석 연휴에도 하나송금은 정상근무합니다.',
+                title: '추석 연휴에도 withremit은 정상근무합니다.',
                 date: '2025-10-03',
                 author: 'manager',
                 views: 52,
