Update notice title for holiday announcement

--- a/notice_list.html
+++ b/notice_list.html
@@ -159,7 +159,7 @@
                             </tr>
                             <tr>
                                 <td class="td-num">17</td>
-                                <td class="notice-title"><a href="#">추석 연휴에도 하나송금은 정상근무합니다.</a></td>
+                                <td class="notice-title"><a href="#">추석 연휴에도 withremit은 정상근무합니다.</a></td>
                                 <td>2025.10.03</td>
                                 <td class="td-views">50</td>
                             </tr>
